--- a/DNATesing.SoapAPIServices.PhienNT/DNATesing.SoapAPIServices.PhienNT.csproj
+++ b/DNATesing.SoapAPIServices.PhienNT/DNATesing.SoapAPIServices.PhienNT.csproj
@@ -16,4 +16,8 @@
     <Folder Include="SoapModels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DNATesting.Service.PhienNT\DNATesting.Service.PhienNT.csproj" />
+  </ItemGroup>
+
 </Project>
